# crema-lambda-runtime

./: .dockerignore  .gitignore  COMMERCIAL-LICENSE.md  Dockerfile.native  LICENSE  LICENSE-FAQ.md  README.md  build.gradle  gradle.properties  pom.xml  settings.gradle
bootstrap/: .gitignore  build.gradle  pom.xml
common/: .gitignore  build.gradle  pom.xml
events-jackson2/: README.md  build.gradle
events-schemas/: README.md  build.gradle
gradle/: crema-publishing.gradle
rapid-client-hyper/: README.md  build.gradle
rapid-client-hyper/rust/: Cargo.toml
rapid-client-hyper/rust/src/: jni.rs  lib.rs  types.rs
rapid-client-hyper/rust/src/tests/: buffered.rs  streaming.rs
rapid-client-jdk/: .gitignore  build.gradle
rapid-client-netty/: build.gradle
rapid-client-okhttp/: build.gradle
rapid-http-client/: .gitignore  build.gradle  pom.xml
rapid-http-client-hyper/: README.md  build.gradle
rapid-http-client-hyper/rust/: Cargo.toml
rapid-http-client-jdk/: build.gradle
rapid-http-client-netty/: build.gradle
rapid-http-client-okhttp/: build.gradle
serde-gson/: build.gradle
serde-jackson2/: build.gradle
test-base-image/: build.gradle
test-handlers/: build.gradle
test-handlers/consumer-handler/: build.gradle
test-handlers/echo-string-handler/: build.gradle
test-handlers/pojo-handler/: build.gradle
test-handlers/pojo-handler2/: build.gradle
test-handlers/reverse-string-handler/: build.gradle
test-handlers/runnable-handler/: build.gradle
test-handlers/throws-handler/: build.gradle
test-provided-image/: build.gradle
(+469 files in other folders)
