[package]
name = "crema_rapid_hyper"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
name = "crema_rapid_hyper"

[dependencies]
bytes = "1.5"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1.9", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
jni = "0.21"
tokio = { version = "1.36", features = ["rt", "net", "time", "sync"] }

[dev-dependencies]
hyper = { version = "1.9", features = ["server"] }
tokio = { version = "1.36", features = ["macros", "sync", "rt-multi-thread"] }
